# crow-translate

./: .clang-format  .clang-format-ignore  .clang-tidy  .flatpak-manifest.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  CHANGELOG.md  CMakeLists.txt  Messages.sh  README.md  crowdin.yml
.reuse/: dep5
cmake/: AppImage.cmake  CPackProjectConfig.cmake  DetectLibraryType.cmake  FindLeptonica.cmake  FindONNXRuntime.cmake  FindTesseract.cmake  FindWEBP.cmake  espeak-ng-deps.cmake
data/: io.crow_translate.CrowTranslate.metainfo.xml  org.kde.CrowTranslate.desktop.in  org.kde.CrowTranslate.metainfo.xml
data/icons/: flags.qrc  icon-theme.qrc  index.theme
data/icons/app/: app.qrc  update-png.sh
data/icons/engines/: engines.qrc
data/translations/: crow-translate.ts  crow-translate_ar_SA.ts  crow-translate_az_AZ.ts  crow-translate_de_DE.ts  crow-translate_el_GR.ts  crow-translate_es_ES.ts  crow-translate_et_EE.ts  crow-translate_eu_ES.ts  crow-translate_fi_FI.ts  crow-translate_fr_FR.ts  crow-translate_hi_IN.ts  crow-translate_hr_HR.ts  crow-translate_hu_HU.ts  crow-translate_id_ID.ts  crow-translate_it_IT.ts  crow-translate_ko_KR.ts  crow-translate_lv_LV.ts  crow-translate_ms_MY.ts  crow-translate_nl_NL.ts  crow-translate_pl_PL.ts  crow-translate_pt_BR.ts  crow-translate_pt_PT.ts  crow-translate_ru_RU.ts  crow-translate_sq_AL.ts  crow-translate_tr_TR.ts  crow-translate_ug_CN.ts  crow-translate_uk_UA.ts  crow-translate_zh_CN.ts  crow-translate_zh_TW.ts
poqm/ar/: crow-translate_qt.po
poqm/az/: crow-translate_qt.po
poqm/be/: crow-translate_qt.po
poqm/ca/: crow-translate_qt.po
poqm/ca@valencia/: crow-translate_qt.po
poqm/cs/: crow-translate_qt.po
poqm/de/: crow-translate_qt.po
poqm/el/: crow-translate_qt.po
poqm/en_GB/: crow-translate_qt.po
poqm/eo/: crow-translate_qt.po
poqm/es/: crow-translate_qt.po
poqm/et/: crow-translate_qt.po
poqm/eu/: crow-translate_qt.po
poqm/fi/: crow-translate_qt.po
poqm/fr/: crow-translate_qt.po
poqm/ga/: crow-translate_qt.po
poqm/gl/: crow-translate_qt.po
poqm/he/: crow-translate_qt.po
poqm/hi/: crow-translate_qt.po
poqm/hr/: crow-translate_qt.po
poqm/hu/: crow-translate_qt.po
poqm/ia/: crow-translate_qt.po
poqm/id/: crow-translate_qt.po
poqm/it/: crow-translate_qt.po
poqm/ka/: crow-translate_qt.po
poqm/ko/: crow-translate_qt.po
poqm/lt/: crow-translate_qt.po
poqm/lv/: crow-translate_qt.po
poqm/ms/: crow-translate_qt.po
poqm/nl/: crow-translate_qt.po
poqm/pl/: crow-translate_qt.po
poqm/pt/: crow-translate_qt.po
poqm/pt_BR/: crow-translate_qt.po
poqm/ru/: crow-translate_qt.po
poqm/sk/: crow-translate_qt.po
poqm/sl/: crow-translate_qt.po
poqm/sq/: crow-translate_qt.po
poqm/sv/: crow-translate_qt.po
poqm/ta/: crow-translate_qt.po
poqm/tr/: crow-translate_qt.po
poqm/ug/: crow-translate_qt.po
poqm/uk/: crow-translate_qt.po
poqm/zh_CN/: crow-translate_qt.po
poqm/zh_TW/: crow-translate_qt.po
src/: cli.cpp  cli.h  cmake.h.in  contextmenu.cpp  contextmenu.h  instancepinger.cpp  instancepinger.h  instancepingerdialog.cpp  instancepingerdialog.h  language.cpp  language.h  languagebuttonswidget.cpp  languagebuttonswidget.h  languagesdialog.cpp  languagesdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  onlinetranslator.cpp  onlinetranslator.h  playlistplayer.cpp  playlistplayer.h  popupwindow.cpp  popupwindow.h  popupwindow.ui  provideroptions.cpp  provideroptions.h  provideroptionsmanager.cpp  provideroptionsmanager.h  screenwatcher.cpp  screenwatcher.h  selection.cpp  selection.h  sourcetextedit.cpp  sourcetextedit.h  speakbuttons.cpp  speakbuttons.h  translationedit.cpp  translationedit.h  (+9 more)
src/ocr/: ocr.cpp  ocr.h  snippingarea.cpp  snippingarea.h
src/ocr/screengrabbers/: abstractscreengrabber.cpp  abstractscreengrabber.h  dbusscreengrabber.cpp  dbusscreengrabber.h  genericscreengrabber.cpp  genericscreengrabber.h  waylandgnomescreengrabber.cpp  waylandgnomescreengrabber.h  waylandplasmascreengrabber.cpp  waylandplasmascreengrabber.h  waylandportalscreengrabber.cpp  waylandportalscreengrabber.h
src/onlinetranslator/: onlinetranslator.cpp  onlinetranslator.h  onlinetts.cpp  onlinetts.h  translationexample.cpp  translationexample.h  translationoptions.cpp  translationoptions.h
src/qgittag/: CMakeLists.txt  README.md  qgitasset.cpp  qgitasset.h  qgittag.cpp  qgittag.h
src/qgittag/src/: qgitasset.cpp  qgitasset.h  qgittag.cpp  qgittag.h
src/qonlinetranslator/: .clang-tidy  CMakeLists.txt
src/qonlinetranslator/src/: gemini_translate.py  qexample.cpp  qexample.h  qonlinetranslator.cpp  qonlinetranslator.h  qonlinetts.cpp  qonlinetts.h  qoption.cpp  qoption.h
src/qonlinetranslator/tests/: mock_gemini_translate.py  testqonlinetranslatorgemini.cpp
src/settings/: appsettings.cpp  appsettings.h  ocrlanguageslistwidget.cpp  ocrlanguageslistwidget.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tesseractparameterstablewidget.cpp  tesseractparameterstablewidget.h
src/settings/autostartmanager/: abstractautostartmanager.cpp  abstractautostartmanager.h  macosautostartmanager.cpp  macosautostartmanager.h  portalautostartmanager.cpp  portalautostartmanager.h  (+4 more)
src/transitions/: languagedetectedtransition.cpp  languagedetectedtransition.h  ocruninitializedtransition.cpp  ocruninitializedtransition.h  playerstoppedtransition.cpp  playerstoppedtransition.h  retranslationtransition.cpp  retranslationtransition.h  snippingvisibletransition.cpp  snippingvisibletransition.h  textemptytransition.cpp  textemptytransition.h  translatorabortedtransition.cpp  translatorabortedtransition.h  translatorerrortransition.cpp  translatorerrortransition.h
src/translator/: atranslationprovider.cpp  atranslationprovider.h  copytranslationprovider.cpp  copytranslationprovider.h  mozhitranslationprovider.cpp  mozhitranslationprovider.h
src/tts/: attsprovider.cpp  attsprovider.h  mozhittsprovider.cpp  mozhittsprovider.h  noopttsprovider.cpp  noopttsprovider.h  piperttsprovider.cpp  piperttsprovider.h  qtttsprovider.cpp  qtttsprovider.h  voice.cpp  voice.h
(+6 files in other folders)
